# antyx

./: .gitignore  AutoEDA.html  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requeriments.txt  requirements.txt  setup.py  summary.xlsx  summary_binary.csv  summary_categorical.csv  summary_datetime.csv  summary_non_numeric.csv  summary_numeric.csv
antix.egg-info/: PKG-INFO  SOURCES.txt
antyx/: assets.py
antyx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
antyx/antyx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
antyx/principals/: data_loader.py  report.py
antyx/styles/: base.css  correlations.css  layout.css  lines.css  overview.css  profiles.css  summary.css  tables.css  tabs.css  theme-dark.css  visualizations.css
antyx/utils/: correlations.py  lines.py  outliers.py  overview.py  profiles.py  summary.py  visualizations.py
data/: CLIENTES.csv  VENTAS.csv
docs/: index.md
docs/getting-started/: installation.md
docs/principals/: data_loader.md  report.md
docs/utils/: correlations.md  outliers.md  summary.md
site/: 404.html  index.html  objects.inv  search.html
site/api-reference/core/: index.html
site/docs/: index.html
site/getting-started/installation/: index.html
site/principals/data_loader/: index.html
site/principals/report/: index.html
site/search/: search_index.json
site/utils/correlations/: index.html
src/antyx.egg-info/: PKG-INFO
src/principals/: report.py
src/styles/: correlations.css  images.css  layout.css  theme-light.css
src/utils/: outliers.py  overview.py  summary.py  utils.py
(+3 files in other folders)
